# aose

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tmp_existing_account.json  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_phase1_identity_and_setup_tables.py  0002_phase1_persistence_and_artifacts.py  0003_phase2_chat_thread_context.py  0004_phase2_chat_turn_idempotency.py  (+2 more)
api/: AGENT.md  Dockerfile  requirements-dev.txt  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
frontend/: .dockerignore  .env.example  Dockerfile  README.md  components.json  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
scripts/: dev.ps1  dev.sh  verify_docker.sh  verify_windows.ps1
tests/: test_agent_contracts.py  test_agents_api.py  test_app_smoke.py  test_chat_api.py  test_chat_event_projection.py  test_health_api.py  test_identity_api.py  test_model_metadata.py  test_orchestration_contracts.py  test_phase3_provider_adapters.py  test_phase3_reasoning_contracts.py  test_phase3_runtime_wiring.py  test_review_api.py  test_review_contracts.py  test_runtime_interface_contracts.py  test_setup_api.py  test_tenancy_api.py
web/: AGENT.md  index.html  package-lock.json  package.json
wiki/: index.md  log.md  schema.md
worker/: AGENT.md  Dockerfile  requirements-dev.txt  requirements.txt
(+517 files in other folders)
