[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ose"
version = "0.1.0"
description = "Minimal FastAPI backend skeleton for an agentic SaaS."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "openai-agents>=0.13.0",
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.6.0",
    "PyJWT>=2.10.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["^alembic/"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
